# Space-Pong

./: .gitignore  CMakeLists.txt  README.md
src/: Ball.cpp  Ball.h  GUI.cpp  GUI.h  Game.cpp  Game.h  Globals.h  Menu.cpp  Menu.h  StateManager.h  main.cpp  paddle1.cpp  paddle1.h
src/Player/: PaddleController.cpp  PaddleController.h  paddle.cpp  paddle.h
src/Resources/: Thumbs.db
src/Resources/Textures/: Thumbs.db
